# semgrep-ghes-util

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/semgrep_ghes_util/: cli.py
src/semgrep_ghes_util/clients/: semgrep_client.py
tests/: test_strip_trailing_slash.py
