[project]
name = "semgrep-scm-util"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
semgrep-scm-util = "semgrep_ghes_util.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semgrep_ghes_util"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
